<resources>
    <string name="app_name">567 QuizGame</string>
    <string name="menu_button">Menu</string>
    <string name="btnA">A</string>
    <string name="btnB">B</string>
    <string name="btnC">C</string>
    <string name="btnD">D</string>
    <string name="btnPrev">Prev</string>
    <string name="btnNext">Next</string>
    <string name="menu_title">Programming Trivia Fun!</string>
    <string name="start_button">Start</string>
    <string name="help_button">Help</string>
    <string name="quit_button">Quit</string>
    <string name="score_button">Score</string>
    <string name="score_text_view">Here\'s How You Did!</string>
    <string name="score_correct">Correct</string>
    <string name="score_possible">Total</string>
    <string name="score_time">Time Elapsed:</string>
    <string name="score_pts">Points: </string>
    <string name="enter_name">Enter Your Name and Share with Friends!</string>
    <string name="return_home">Home Screen</string>
    <string name="score_user_name">User</string>
    <string name="score_save_button_text">Save</string>
    <string name="first_question">When creating an object from a class, what is always invoked?</string>
    <string name="homepage_title">Welcome to the Ultimate Quiz Game!</string>
    <string name="csharp">C#</string>
    <string name="javascript">JavaScript</string>
    <string name="python">Python</string>
    <string name="cpp">C++</string>
    <string name="langSelect">Please select the language of your choosing: </string>
    <string name="difficultySelect">Please select a level of difficulty: </string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="prodigy">Prodigy</string>
    <string name="playagain">Heck yeah!</string>
    <string name="exitgame">No thanks!</string>
    <string name="correctAnswer">Correct! :)</string>
    <string name="incorrectAnswer">Incorrect :(</string>
    <string name="out_of_range">There are no more questions.</string>
    <string name="cppEasyQuestion1">This is CPP Easy Test 1.</string>
    <string name="cppMediumQues1">This is CPP Medium Test 1.</string>
    <string name="cppHardQues1">This is a CPP Hard Test 1.</string>
    <string name="cppProdigyQues1">This is a CPP Progidgy Test 1.</string>
    <string name="cppEasyChoices1">A: Cpp easy 1\nB: Cpp easy 1\nC: Cpp easy 1\nD: Cpp easy 1.</string>
    <string name="cppMediumChoices1">A: Cpp medium 1\nB: Cpp medium 1\nC: Cpp medium 1\nD: Cpp medium 1.</string>
    <string name="cppHardChoices1">A: Cpp easy 1\nB: Cpp easy 1\nC: Cpp easy 1\nD: Cpp easy 1.</string>
    <string name="cppProdigyChoices1">A: Cpp easy 1\nB: Cpp easy 1\nC: Cpp easy 1\nD: Cpp easy 1.</string>
    <string name="easyCPPThree">"What's the difference between a struct and class"</string>
    <string name="easyCPPThreeAns">"in a struct all vars are default public\nB: only structs are utilized to produce instances of a class\nC: No difference\nD: None of the above"</string>
    <string name="medCPPThree">"Which of these is known as the 'garbage collector'"</string>
    <string name="medCPPThreeAns">"A: constructor\nB: destructor\nC: copy move constructor \nD: None of the above"</string>
    <string name="hardCPPThree">"Where is dynamically allocated placed? "</string>
    <string name="hardCPPThreeAns">"A: The stack\nB:data \nC: the heap \nD: None of the above"</string>
    <string name="prodigyCPPThree">" What Is A Default Constructor?"</string>
    <string name="prodigyCPPThreeAns">"A: doesn't exist\nB: a constructor that isn't used\nC: a constructor that takes no parameters \nD: None of the above"</string>
    <string name="PythonEasyQues1">Python is a ....</string>
    <string name="PythonEasyChoices1">A: High-level language\nB: Low-level language\nC: Poisonous spider\nD: Mid-level language.</string>
    <string name="pythonEasyQues2">Which of the following comments out a single line?</string>
    <string name="pythonEasyChoices2">A: //\nB: """expression"""\nC: #\nD: /* */</string>
    <string name="pythonEasyQues3">Which operator performs multiplication?</string>
    <string name="pythonEasyChoices3">A: %\nB: x\nC: *\nD: **</string>
    <string name="pythonEasyQues4">Which operator performs floor division?</string>
    <string name="pythonEasyChoices4">A: /\nB: //\nC: ///\nD: %</string>
    <string name="PythonMediumQues1">Which of the following is a correct \'if\' statement?</string>
    <string name="PythonMediumChoices">A: if (x = y) {code;}\nB: if x = y: code\nC: if (x == y) {code;}\nD: if x == y: code</string>
    <string name="pythonMediumQues2">How do you import a module in Python?</string>
    <string name="pythonMediumChoices2">A: #include\nB: import\nC: import moduleName\nD: #import</string>
    <string name="pythonMediumQues3">Which statement represents an augmented assignment?</string>
    <string name="pythonMediumChoices3">A: a += 5\nB: a = a + 5\nC: a =+ 5\n:D: a = a += 5</string>
    <string name="pythonMediumQues4">What is the output for\na = ["he","she","we"]\n.join(a)</string>
    <string name="pythonMediumChoices4">A: ["heshewe"]\nB: "heshewe"\n:C ["he she we"]\nD: "he she we"</string>
    <string name="PythonHardQues1">Which of the following is a Python Keyword?</string>
    <string name="PythonHardChoices1">A: new\nB: malloc\nC: true\nD: True</string>
    <string name="pythonHardQues2">What is the outcome of this statement?\n(4 * 8 + 6 / 2) % 10</string>
    <string name="pythonHardChoices2">A: 5\nB: 35\nC: 30\nD: 0</string>
    <string name="pythonHardQues3">What is the output for\nb = [11,13,15,17,19,21]\nprint(b[::2])</string>
    <string name="pythonHardChoices3">A: [19,21]\nB: [11,15]\nC: [11,15,19]\nD: [13,17,21]</string>
    <string name="PythonProdigyQues1">Which of the following is a Python Keyword?</string>
    <string name="PythonProdigyChoices1">A: new\nB: switch\nC: yield\nD: switch</string>
    <string name="pythonProdigyQues2">What class is every class automatically made a subclass of?</string>
    <string name="pythonProdigyChoices2">A: class\nB: object\nC: thing\nD: super</string>
    <string name="CsharpeEasy1">This is C# test Easy 1.</string>
    <string name="CsharpeChoicesEasy1">A: this is good\nB: what\'s for dinner.</string>
    <string name="easyCSOne">" Which of the following operator creates a pointer to a variable in C#?"</string>
    <string name="easyCSOneAns">"A: sizeof\nB: typeof\nC: *\nD: ampersand"</string>
    <string name="easyCSTwo">Which of the following is correct about variable naming conventions in C#?</string>
    <string name="easyCSTwoAns">"A: A name must begin with a letter that could be followed by a sequence of letters, digits (0 to 9) or underscore\nB: The first character in an identifier cannot be a digit\nC: Both of the above\nD: None of the above"</string>
    <string name="easyCSThree">"Which of the following can be used to define the member of a class externally?"</string>
    <string name="easyCSThreeAns">"A) :\nB) ::\nC) #\nD) none of the mentioned"</string>
    <string name="easyCSFour">"Which of the following operator can be used to access the member function of a class?"</string>
    <string name="easyCSFourAns">"A) :\nB) ::\nC) .\nD) #"</string>
    <string name="easyCSFive">"Which of the following gives the correct count of the constructors that a class can define?"</string>
    <string name="easyCSFiveAns">"A) 1\nB) 2\nC) Any number\nD) None of the above"</string>
    <string name="easyCSSix">"What is the correct name of a method which has the same name as that of class and used to destroy objects?
    Note – This method gets called automatically when the application is at the final stage waiting for the process to terminate.
    "</string>
    <string name="easyCSSixAns">"A) Constructor\nB) Finalize()\nC) Destructor\nD) End"</string>
    <string name="medCSOne">" Which of the following access specifier in C# allows a class to expose its member variables and member functions to other functions and objects in the current assembly??"</string>
    <string name="medCSOneAns">"A: Public\nB: Private\nC: Protected\nD: Internal"</string>
    <string name="medCSTwo">"Which of the following converts a type to a small floating point number in C#?</string>
    <string name="medCSTwoAns">"A: ToInt64\nB: ToSbyte\nC: ToSingle\nD: None of the above"</string>
    <string name="medCSThree">"Which of the following statements is not correct for run-time polymorphism?"</string>
    <string name="medCSThreeAns">"A) The overridden base method should be virtual, abstract or override.\nB) An abstract method is implicitly a virtual method.\nC) An abstract inherited property cannot be overridden in a derived class.\nD) Both the override method and virtual method must have the same access level modifier."</string>
    <string name="medCSFour">"Which of the following keywords is used to refer base class constructor to subclass constructor?"</string>
    <string name="medCSFourAns">"A) this\nB) static\nC) base\nD) extend"</string>
    <string name="medCSFive">"Which of the following options represents the type of class which does not have its own objects but acts as a base class for its subclass?"</string>
    <string name="medCSFiveAns">"A) Static class\nB) Sealed class\nC) Abstract class\nD) Derived class"</string>
    <string name="medCSSix">"Which of the following represents a class that inherits an abstract class but it does not define all of its functions?"</string>
    <string name="medCSSixAns">"A) Abstract\nB) A simple class\nC) Static class\nD) derived class"</string>
    <string name="hardCSOne">"Which of the following property of Array class in C# gets a 32-bit integer, the total number of elements in all the dimensions of the Array?"</string>
    <string name="hardCSOneAns">"A: Rank\nB: LongLength\nC: Length\nD: None of the above"</string>
    <string name="hardCSTwo">"Which of the following is the default access specifier of a class member function?? "</string>
    <string name="hardCSTwoAns">"A: Public\nB: Private\nC: Protected\nD: Internal"</string>
    <string name="hardCSThree">". Which of the following represents the process of defining two or more methods within the same class having the same name but different parameters list?"</string>
    <string name="hardCSThreeAns">"A) Method overloading\nB) Method overriding\nC) Encapsulation\nD) None of the mentioned"</string>
    <string name="hardCSFour">"Which of the following are applicable for overloading?"</string>
    <string name="hardCSFourAns">"A) Constructors\nB) Methods\nC) Both A and B\nD) None of the mentioned"</string>
    <string name="hardCSFive">"Which of the following keywords can be used to overload user-defined types by defining static member functions?"</string>
    <string name="hardCSFiveAns">"A) op\nB) opoverload\nC) operator\nD) operatoroverload"</string>
    <string name="hardCSSix">"Which of the following modifier applies when a virtual method is redefined by a derived class?"</string>
    <string name="hardCSSixAns">"A) overloads\nB) override\nC) overridable\nD) virtual"</string>
    <string name="prodigyCSOne">"Which of the following is true about exceptions in C#?"</string>
    <string name="prodigyCSOneAns">"A:The exception classes in C# are mainly directly or indirectly derived from the System.Exception class\nB: C# exceptions are represented by classes\nC:  Both of the above.\nD: None of the above"</string>
    <string name="prodigyCSTwo">"Does C# support multiple inheritance"</string>
    <string name="prodigyCSTwoAns">"A: Yes\nB: No\nC: Sometimes\nD:When it feels like it"</string>
    <string name="prodigyCSThree">"Which of the following keywords can be used to access a member of the base class from derived class?"</string>
    <string name="prodigyCSThreeAns">"A) upper\nB) base\nC) this\nD) None of the above"</string>
</resources>