<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        app:srcCompat="@drawable/clipboard" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text_view"
        android:id="@+id/score_view"
        android:textSize="34sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correct_text_view"
            android:textSize="30dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/score_correct"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/possible_text_view"
            android:paddingRight="20dp"
            android:textSize="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/score_possible"
            android:textSize="30dp" />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_time"
            android:paddingLeft="0dp"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timer_text_view"
            android:padding="24dp"
            android:textSize="30dp"/>

    </LinearLayout>

    <!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/enter_name"-->
<!--        android:textSize="24dp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/score_pts"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/score_points_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="30dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/score_input_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/score_user_name"
        android:gravity="center"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/score_return_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_home" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_save_button"
            android:text="@string/score_save_button_text"/>

    </LinearLayout>



</LinearLayout>