<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".DifficultySelect">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:paddingBottom="20dp"
            android:text="@string/difficultySelect" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonDefault.Easy"
            android:text="@string/easy"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/easy_button"
            android:textColor="@color/buttonTextColor"
            />

        <Button
            style="@style/ButtonDefault.Med"
            android:text="@string/medium"
            android:textColor="@color/buttonTextColor"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/medium_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonDefault.Hard"
            android:text="@string/hard"
            android:textColor="@color/buttonTextColor"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/hard_button"/>


        <Button
            style="@style/ButtonDefault.Prod"
            android:text="@string/prodigy"
            android:textColor="@color/buttonTextColor"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/prodigy_button"/>
    </LinearLayout>


</LinearLayout>