<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/start_menu_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_title"
            android:textSize="50sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/menu_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/menu_help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_button"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/menu_quit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit_button"
            android:textSize="24sp"/>
    </LinearLayout>


</LinearLayout>