<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".QuestionActivity">



    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="24dp"
        android:textSize="24sp"
        android:text="" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:gravity="left"
            android:padding="30dp"
            android:textSize="20sp"
            android:text=""
            android:id="@+id/choices_view"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonDefault"
            android:id="@+id/a_button"
            android:layout_width="wrap_content"
            android:textColor="@color/buttonTextColor"
            android:layout_height="wrap_content"
            android:text="@string/btnA"
            />


        <Button
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:textColor="@color/buttonTextColor"
            android:layout_height="wrap_content"
            android:text="@string/btnB"
            android:id="@+id/b_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonDefault"
            android:id="@+id/c_button"
            android:textColor="@color/buttonTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnC"/>


        <Button
            style="@style/ButtonDefault"
            android:id="@+id/d_button"
            android:textColor="@color/buttonTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnD"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="24dp"
            android:id="@+id/chronometer_view"/>

    </LinearLayout>

</LinearLayout>